--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,10 +6,10 @@
 
   <meta charset="UTF-8"> 
 
-  <title></title> 
+  <title>Sign-up</title> 
 
   <link rel="stylesheet" href="/css/stylehome.css"> 
-
+  <link rel="shortcut icon" href="/images/logo3.png" type="image/x-icon">
  </head> 
 
  <body> <!-- partial:index.partial.html --> 
@@ -20,7 +20,7 @@
 
     <div class="content"> 
 
-     <h2>MUSIK</h2> 
+     <h2 style="color:whitesmoke;">MUSIK</h2> 
 
      <form  class="form"> 
 
@@ -30,7 +30,7 @@
 
       </div> 
 
-      <div class="inputBox"> 
+      <div class="inputBox" style="text-align: center;"> 
 
        <button type="button"><a href="/auth/google">GET STARTED!</a></button>
 
