--- a/views/username.ejs
+++ b/views/username.ejs
@@ -6,9 +6,10 @@
 
   <meta charset="UTF-8"> 
 
-  <title></title> 
+  <title>Sign-up</title> 
 
   <link rel="stylesheet" href="/css/stylehome.css"> 
+  <link rel="shortcut icon" href="/images/logo3.png" type="image/x-icon">
 
  </head> 
 
@@ -20,17 +21,17 @@
 
     <div class="content"> 
 
-     <h2>HELLO !</h2> 
+     <h2 style="color:whitesmoke;">HELLO !</h2> 
 
-     <form  class="form"> 
-      <div class="inputBox"> 
+     <form  class="form" action="/username" method="post"> 
+      <div class="inputBox" style="text-align: center;"> 
 
-        <input type="text" placeholder="Enter Your App Name ">
+        <input type="text" placeholder="Enter Your App Name "style="height:6vh ;width:40vb" name="username" >
 
       </div> 
-      <div class="inputBox"> 
+      <div class="inputBox" style="text-align: center;"> 
 
-      <button><a href="/">LET'S GO </a></button>
+      <button type="submit"><a href="/musik">LET'S GO!</a></button>
 
       </div> 
 
