--- a/views/musik.ejs
+++ b/views/musik.ejs
@@ -87,6 +87,9 @@
                     <li>
                         <a href="/">Sign Up</a>
                     </li>
+                    <li>
+                        <a href="/artist">Add Song</a>
+                    </li>
                 </ul>
                 <a href="/auth/google" style="text-decoration: none;"><button type="button">Login</button></a>
             </div>
