--- a/views/artist.ejs
+++ b/views/artist.ejs
@@ -29,9 +29,9 @@
         <label for="songname">Song Name:</label><br>
         <input type="text" id="songname" name="songName"><br>
         <label for="image">Image:</label><br>
-        <input type="file" id="image" name="image"><br>
+        <input type="file" id="image" name="image"accept="image/*" required><br>
         <label for="audio">Audio:</label><br>
-        <input type="file" id="audio" name="audio"><br>
+        <input type="file" id="audio" name="audio" accept="audio/*"required><br>
         <input type="submit" value="Submit">
       </form>
 
